--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
         <h1>Xin Jin</h1>
         <p>Postdoc. of Control Science and Engineering<br>East China University of Science and Technology</p>
         <p>Research Affiliate<br><a href="https://cise.ecust.edu.cn/">Institute for the ecust</a></p>
-    <h3><a href="https://xin_cv.github.io/">Home</a></h3>
-        <h3><a href="https://xin_cv.github.io/research.html">Research</a></h3>
-    <h3><a href="https://xin_cv.github.io/research/CV.pdf">CV</a></h3>  
-        <h3><a href="https://xin_cv.github.io/code.html">Code</a></h3> 
-        <h3><a href="https://xin_cv.github.io/teaching.html">Teaching</a></h3> 
-        <h3><a href="https://xin_cv.github.io/personal.html">Personal</a></h3>
+    <h3><a href="https://jx9810.github.io/">Home</a></h3>
+        <h3><a href="https://jx9810.github.io/research.html">Research</a></h3>
+    <h3><a href="https://jx9810.github.io/research/CV.pdf">CV</a></h3>  
+        <h3><a href="https://jx9810.github.io/code.html">Code</a></h3> 
+        <h3><a href="https://jx9810.github.io/teaching.html">Teaching</a></h3> 
+        <h3><a href="https://jx9810.github.io/personal.html">Personal</a></h3>
     <b>Social</b><br>
         <div class="social-row">
           <a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
