--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </header>
       <section>
       <img src="3-2021-09-08-174871#.jpg" height="250" width="250" alt="Xin Jin"></h3>
-      <p>I am currently a Postdoctoral of <a href="https://cise.ecust.edu.cn/">Control Science and Engineering</a> at the <a href="https://www.ecust.edu.cn/">University of Oklahoma</a> and Research Affiliate at the <a href="https://www.iza.org/">Institute for the Study of Labor (IZA)</a>. I graduated with a PhD in <a href="http://econ.duke.edu">Economics</a> from <a href="http://www.duke.edu">Duke University</a> in May 2015.</p>
+      <p>I am currently a Postdoctoral of <a href="https://cise.ecust.edu.cn/">Control Science and Engineering</a> at the <a href="https://www.ecust.edu.cn/">East China Univeristy of Science and Technology</a> and Research Affiliate at the <a href="https://www.iza.org/">Department of Automation</a>. I graduated with a PhD in <a href="http://econ.duke.edu">Contro Science and Engineering</a> from <a href="http://www.duke.edu">East China Univeristy of Science and Technology University</a> in June 2021.</p>
       <p>My research interests include rigid body, attitude control, multi-agent systems, event-triggered control, and applications of robotics.</p>
       </section>
     </div>
