--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
       <section>
-      <img src="3-2021-09-08-174871#.jpg" height="250" width="250" alt="Xin Jin"></h3>
+      <img src="photo1.jpg" height="250" width="250" alt="Xin Jin"></h3>
       <p>I am currently a Postdoctoral of <a href="https://cise.ecust.edu.cn/">Control Science and Engineering</a> at the <a href="https://www.ecust.edu.cn/">East China Univeristy of Science and Technology</a> and Research Affiliate at the <a href="https://www.iza.org/">Department of Automation</a>. I graduated with a PhD in <a href="http://econ.duke.edu">Contro Science and Engineering</a> from <a href="http://www.duke.edu">East China Univeristy of Science and Technology University</a> in June 2021.</p>
       <p>My research interests include rigid body, attitude control, multi-agent systems, event-triggered control, and applications of robotics.</p>
       </section>
