--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <header>
         <h1>Xin Jin</h1>
         <p>Postdoc. of Control Science and Engineering<br>East China University of Science and Technology</p>
-        <p>Research Affiliate<br><a href="https://cise.ecust.edu.cn/">Institute for the ecust</a></p>
+        <p>Research Affiliate<br><a href="https://cise.ecust.edu.cn/">Department of Automation</a></p>
     <h3><a href="https://jx9810.github.io/">Home</a></h3>
         <h3><a href="https://jx9810.github.io/research.html">Research</a></h3>
     <h3><a href="https://jx9810.github.io/research/CV.pdf">CV</a></h3>  
