--- a/research.html
+++ b/research.html
@@ -1,11 +1,10 @@
-
 <!doctype html>
 <html lang="en">
   <head>
   <script src="https://use.fontawesome.com/baff6f55f5.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tyler Ransom by tyleransom</title>
+    <title>Xin Jin by xinjin</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -19,6 +18,7 @@
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
       ga('create', 'UA-29643011-3', 'auto');
       ga('send', 'pageview');
     </script>
@@ -35,7 +35,7 @@
     <!-- For all browsers -->
     <link rel="stylesheet" href="assets/css/academicons.min.css"/>
     <link rel="stylesheet" href="assets/css/academicons.css"/>
-    
+
     <style>
       button.accordion {
       font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -82,36 +82,37 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Tyler Ransom</h1>
-        <p>Associate Professor of Economics<br>University of Oklahoma</p>
-        <p>Research Affiliate<br><a href="http://legacy.iza.org/en/webcontent/personnel/photos/index_html?key=24155">Institute for the Study of Labor (IZA)</a></p>
-    <h3><a href="https://tyleransom.github.io/">Home</a></h3>
-        <h3><a href="https://tyleransom.github.io/research.html">Research</a></h3>
-    <h3><a href="https://tyleransom.github.io/research/CV.pdf">CV</a></h3>  
-        <h3><a href="https://tyleransom.github.io/code.html">Code</a></h3> 
-        <h3><a href="https://tyleransom.github.io/teaching.html">Teaching</a></h3> 
-        <h3><a href="https://tyleransom.github.io/personal.html">Personal</a></h3>
+        <h1>Xin Jin</h1>
+        <p>Postdoc. of Control Science and Engineering<br>East China University of Science and Technology</p>
+        <p>Research Affiliate<br><a href="https://cise.ecust.edu.cn/">Department of Automation</a></p>
+    <h3><a href="https://jx9810.github.io/">Home</a></h3>
+        <h3><a href="https://jx9810.github.io/research.html">Research</a></h3>
+    <h3><a href="https://jx9810.github.io/research/CV.pdf">CV</a></h3>  
+        <h3><a href="https://jx9810.github.io/code.html">Code</a></h3> 
+        <h3><a href="https://jx9810.github.io/teaching.html">Teaching</a></h3> 
+        <h3><a href="https://jx9810.github.io/personal.html">Personal</a></h3>
     <b>Social</b><br>
         <div class="social-row">
           <a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
           <a href="https://scholar.google.com/citations?user=eohlTTcAAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>
           <a href="https://orcid.org/0000-0002-6910-0363"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br>
           <a href="http://ideas.repec.org/f/pra541.html"><i class="fa fa-fw fa-share-alt-square"></i> RePEc</a><br>
-          <a href="http://github.com/tyleransom"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
-          <a href="http://twitter.com/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>
-          <a href="http://linkedin.com/in/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
+          <a href="http://github.com/jx9810"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
+          <a href="http://twitter.com/jx9810" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>
+          <a href="http://linkedin.com/in/jx9810" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
           <br>
         </div>
         <br>
 
-    <p><b>Contact:</b><br>Department of Economics<br>University of Oklahoma<br>322 CCD1, 308 Cate Center Drive<br>Norman, OK 73072</p>
+    <p><b>Contact:</b><br>Department of Automation<br>East China University of Science and Technology,<br>130 Meilong Road<br>Shanghai 200237</p>
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-
       </header>
+
       <section>
 
     <h2><a id="recent-RRs-updated" class="anchor" href="#RRpapers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Papers under Revision to Resubmit</h2>
-    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/research/CollegeDropout2016May31.pdf">College Attrition and the Dynamics of Information Revelation</a> <br> with <a href="http://public.econ.duke.edu/~psarcidi/">Peter Arcidiacono</a>, <a href="https://sites.google.com/site/estebanmaucejo/">Esteban Aucejo</a>, and <a href="http://www.amaurel.net/">Arnaud Maurel</a> <br> <b>R &amp; R, <i>Journal of Political Economy</i></b> (updated May 31, 2016) <br><button class="accordion">
+    <p style="margin:0"> 
+      <a style="margin:0; font-size:100%; font-weight:bold" href="https://jx9810.github.io/research/CollegeDropout2016May31.pdf">College Attrition and the Dynamics of Information Revelation</a> <br> with <a href="http://public.econ.duke.edu/~psarcidi/">Peter Arcidiacono</a>, <a href="https://sites.google.com/site/estebanmaucejo/">Esteban Aucejo</a>, and <a href="http://www.amaurel.net/">Arnaud Maurel</a> <br> <b>R &amp; R, <i>Journal of Political Economy</i></b> (updated May 31, 2016) <br><button class="accordion">
       Abstract
     </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> This paper investigates the role played by informational frictions in college and the workplace. We estimate a dynamic structural model of schooling and work decisions, where individuals have imperfect information about their schooling ability and labor market productivity. We take into account the heterogeneity in schooling investments by distinguishing between two- and four-year colleges, graduate school, as well as science and non-science majors for four-year colleges. Individuals may also choose whether to work full-time, part-time, or not at all. A key feature of our approach is to account for correlated learning through college grades and wages, whereby individuals may leave or re-enter college as a result of the arrival of new information on their ability and productivity. Our findings indicate that the elimination of informational frictions would increase the college graduation rate by 9 percentage points, and would increase the college wage premium by 32.7 percentage points through increased sorting on ability. </p></div>
