--- a/personal.html
+++ b/personal.html
@@ -104,9 +104,9 @@
         </div>
         <br>
 
-    <p><b>Contact:</b><br>Department of Economics<br>University of Oklahoma<br>322 CCD1, 308 Cate Center Drive<br>Norman, OK 73072</p>
-    <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </header>
+        <p><b>Contact:</b><br>Department of Automation<br>East China University of Science and Technology,<br>130 Meilong Road<br>Shanghai 200237</p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+          </header>
       <section>
       <h3>About me</h3>
       <p>When I am not working, I am helping my wife raise our children, volunteering at my church (the <a href="https://www.churchofjesuschrist.org/?lang=eng">Church of Jesus Christ of Latter-day Saints</a>) as a financial clerk, cooking, reading books, listening to books and podcasts, tweeting, or (very occasionally) <a href="https://medium.com/@tyleransom">blogging</a>. I am an advocate of <a href="https://en.wikipedia.org/wiki/Intermittent_fasting">intermittent fasting</a> and low-carbohydrate dieting. I am a LaTeX enthusiast and enjoy following sports and doing sports analytics for fun. My favorite teams are: BYU, OU, Chelsea FC, Duke, and the Utah Jazz.</p>
