--- a/personal.html
+++ b/personal.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<!-- <html lang="en"> -->
   <head>
   <script src="https://use.fontawesome.com/baff6f55f5.js"></script>
     <meta charset="utf-8">
@@ -109,7 +109,13 @@
           </header>
       <section>
       <h3>About me</h3>
-      <p>When I am not working, I am helping my wife raise our children, volunteering at my church (the <a href="https://www.churchofjesuschrist.org/?lang=eng">Church of Jesus Christ of Latter-day Saints</a>) as a financial clerk, cooking, reading books, listening to books and podcasts, tweeting, or (very occasionally) <a href="https://medium.com/@tyleransom">blogging</a>. I am an advocate of <a href="https://en.wikipedia.org/wiki/Intermittent_fasting">intermittent fasting</a> and low-carbohydrate dieting. I am a LaTeX enthusiast and enjoy following sports and doing sports analytics for fun. My favorite teams are: BYU, OU, Chelsea FC, Duke, and the Utah Jazz.</p>
+      <p>When I am not working, I am helping my wife raise our children, 
+        volunteering at my church (the <a href="https://www.churchofjesuschrist.org/?lang=eng">Church of Jesus Christ of Latter-day Saints</a>) 
+        as a financial clerk, cooking, reading books, listening to books and podcasts, tweeting, or (very occasionally) 
+        <a href="https://medium.com/@tyleransom">blogging</a>. I am an advocate of <a href="https://en.wikipedia.org/wiki/Intermittent_fasting">
+          intermittent fasting</a> and low-carbohydrate dieting. 
+          I am a LaTeX enthusiast and enjoy following sports and doing sports analytics for fun. 
+          My favorite teams are: BYU, OU, Chelsea FC, Duke, and the Utah Jazz.</p>
       
       <hr />
       <h3>Recent books I've read and highly recommend</h3>
