--- a/research.html
+++ b/research.html
@@ -114,10 +114,12 @@
     </span></a>Papers under Revision to Resubmit</h2>
     <p style="margin:0"> 
       <!-- <a style="margin:0; font-size:100%; font-weight:bold" href="https://jx9810.github.io/research/CollegeDropout2016May31.pdf"> -->
+        <a style="margin:0; font-size:100%; font-weight:bold">
         Event-triggered Attitude Consensus of Multiple Rigid Body Systems with  Prescribed Performance</a> 
         <!-- <br> with <a href="http://public.econ.duke.edu/~psarcidi/">Peter Arcidiacono</a>,  -->
-        with Yang Tang</a>, Yang Shi</a>, 
-        and Xiaotai Wu</a> <br> <b>R &amp; R, <i>IEEE Transactions on Automatic Control</i></b> (updated Dec 10, 2022) <br><button class="accordion">
+        <br> with Yang Tang</a>, Yang Shi</a>, 
+        and Xiaotai Wu</a> <br> <b>Submitted, <i>IEEE Transactions on Automatic Control</i></b> (updated Dec 10, 2022) 
+        <br><button class="accordion">
       <!-- Abstract -->
     <!-- </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;">
@@ -140,8 +142,9 @@
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;">
       <p> <a href="http://www.nber.org/papers/w22325">NBER Working Paper No. 22325</a> (June 2016) </p></div><br> -->
 
+      
     <p style="margin:0"> 
-      <a style="margin:0; font-size:100%; font-weight:bold" href="https://tyleransom.github.io/research/racialpref.pdf">
+      <a style="margin:0; font-size:100%; font-weight:bold">
         Partial Quantum Consensus of Qubits Networks with Connected Topologies</a> 
         <br> with Zhu Cao</a> , Yang Tang</a>, 
         and Jürgen Kurths</a> <br> <b>Revised &amp; Resubmitted, <i>IEEE Transactions on Cybernetics</i></b> (updated Dec 10, 2022) 
