--- a/research.html
+++ b/research.html
@@ -142,7 +142,7 @@
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;">
       <p> <a href="http://www.nber.org/papers/w22325">NBER Working Paper No. 22325</a> (June 2016) </p></div><br> -->
 
-      
+
     <p style="margin:0"> 
       <a style="margin:0; font-size:100%; font-weight:bold">
         Partial Quantum Consensus of Qubits Networks with Connected Topologies</a> 
@@ -155,7 +155,9 @@
     <p style="margin:0"><button class="accordion">
       Other versions
     </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <br> <a href="http://www.nber.org/papers/w29964">NBER Working Paper No. 29964</a> (April 2022) <br> <a href="https://www.iza.org/publications/dp/15240/what-the-students-for-fair-admissions-cases-reveal-about-racial-preferences">IZA Discussion Paper No. 15240</a> (April 2022) </p></div>
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;">
+      <p> <br> <a href="http://www.nber.org/papers/w29964">NBER Working Paper No. 29964</a> (April 2022) <br>
+         <a href="https://www.iza.org/publications/dp/15240/what-the-students-for-fair-admissions-cases-reveal-about-racial-preferences">IZA Discussion Paper No. 15240</a> (April 2022) </p></div>
     <p style="margin:0"><button class="accordion">
       Video presentation
     </button>
