Some changes have been made.

--- a/research.html
+++ b/research.html
@@ -88,9 +88,9 @@
     <h3><a href="https://jx9810.github.io/">Home</a></h3>
         <h3><a href="https://jx9810.github.io/research.html">Research</a></h3>
     <h3><a href="https://jx9810.github.io/research/CV.pdf">CV</a></h3>  
-        <h3><a href="https://jx9810.github.io/code.html">Code</a></h3> 
+        <!-- <h3><a href="https://jx9810.github.io/code.html">Code</a></h3> 
         <h3><a href="https://jx9810.github.io/teaching.html">Teaching</a></h3> 
-        <h3><a href="https://jx9810.github.io/personal.html">Personal</a></h3>
+        <h3><a href="https://jx9810.github.io/personal.html">Personal</a></h3> -->
     <b>Social</b><br>
         <div class="social-row">
           <a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
@@ -112,35 +112,14 @@
 
     <h2><a id="recent-RRs-updated" class="anchor" href="#RRpapers" aria-hidden="true"><span class="octicon octicon-link">
     </span></a>Papers under Revision to Resubmit</h2>
+
     <p style="margin:0"> 
       <!-- <a style="margin:0; font-size:100%; font-weight:bold" href="https://jx9810.github.io/research/CollegeDropout2016May31.pdf"> -->
         <a style="margin:0; font-size:100%; font-weight:bold">
-        Event-triggered Attitude Consensus of Multiple Rigid Body Systems with  Prescribed Performance</a> 
+          Event-triggered Attitude Consensus of Multiple Rigid Body Systems with  Prescribed Performance</a> 
         <!-- <br> with <a href="http://public.econ.duke.edu/~psarcidi/">Peter Arcidiacono</a>,  -->
         <br> with Yang Tang</a>, Yang Shi</a>, 
         and Xiaotai Wu</a> <br> <b>Submitted, <i>IEEE Transactions on Automatic Control</i></b> (updated Dec 10, 2022) 
-        <br><button class="accordion">
-      <!-- Abstract -->
-    <!-- </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;">
-      <p> This paper investigates the role played by informational frictions 
-        in college and the workplace. We estimate a dynamic structural model 
-        of schooling and work decisions, where individuals have imperfect 
-        information about their schooling ability and labor market productivity. 
-        We take into account the heterogeneity in schooling investments by 
-        distinguishing between two- and four-year colleges, graduate school, 
-        as well as science and non-science majors for four-year colleges. 
-        Individuals may also choose whether to work full-time, part-time, or not at all. 
-        A key feature of our approach is to account for correlated learning through college grades and wages, 
-        whereby individuals may leave or re-enter college as a result of the arrival of new information on their 
-        ability and productivity. Our findings indicate that the elimination of informational frictions would increase 
-        the college graduation rate by 9 percentage points, and would increase the college wage premium by 32.7 
-        percentage points through increased sorting on ability. </p></div>
-    <p style="margin:0"><button class="accordion">
-      Other versions
-    </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;">
-      <p> <a href="http://www.nber.org/papers/w22325">NBER Working Paper No. 22325</a> (June 2016) </p></div><br> -->
 
 
     <p style="margin:0"> 
@@ -148,6 +127,9 @@
         Partial Quantum Consensus of Qubits Networks with Connected Topologies</a> 
         <br> with Zhu Cao</a> , Yang Tang</a>, 
         and Jürgen Kurths</a> <br> <b>Revised &amp; Resubmitted, <i>IEEE Transactions on Cybernetics</i></b> (updated Dec 10, 2022) 
+
+
+  
         <!-- <br><button class="accordion">  -->
     <!-- Abstract
     </button>   
