--- a/personal.html
+++ b/personal.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<!-- <html lang="en"> -->
+ <html lang="en"> 
   <head>
   <script src="https://use.fontawesome.com/baff6f55f5.js"></script>
     <meta charset="utf-8">
