--- a/research.html
+++ b/research.html
@@ -93,10 +93,10 @@
         <h3><a href="https://jx9810.github.io/personal.html">Personal</a></h3> -->
     <b>Social</b><br>
         <div class="social-row">
-          <a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
-          <a href="https://scholar.google.com/citations?user=eohlTTcAAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>
-          <a href="https://orcid.org/0000-0002-6910-0363"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br>
-          <a href="http://ideas.repec.org/f/pra541.html"><i class="fa fa-fw fa-share-alt-square"></i> RePEc</a><br>
+          <a href="mailto:454674836@qq.com" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
+          <a href="https://scholar.google.com/citations?user=iWPODtYAAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>
+          <a href="https://orcid.org/0000-0002-9515-5712"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br>
+          <!-- <a href="http://ideas.repec.org/f/pra541.html"><i class="fa fa-fw fa-share-alt-square"></i> RePEc</a><br> -->
           <a href="http://github.com/jx9810"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
           <a href="http://twitter.com/jx9810" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>
           <a href="http://linkedin.com/in/jx9810" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
@@ -172,7 +172,11 @@
     <p style="margin:0"> Coming soon. <br> <br> 
 
       
-      <!-- <a style="margin:0; font-size:100%; font-weight:bold" href="https://doi.org/10.3368/jhr.0421-11641R1">Divergent: The Time Path of Legacy and Athlete Admissions at Harvard</a> <br> with <a href="http://public.econ.duke.edu/~psarcidi/">Peter Arcidiacono</a> and <a href="http://www.terry.uga.edu/directory/economics/josh-kinsler">Josh Kinsler</a> <br> <i>Journal of Human Resources</i>, Forthcoming. <br><button class="accordion"> 
+      <!-- <a style="margin:0; font-size:100%; font-weight:bold" href="https://doi.org/10.3368/jhr.0421-11641R1">
+        Divergent: The Time Path of Legacy and Athlete Admissions at Harvard</a> <br> 
+        with <a href="http://public.econ.duke.edu/~psarcidi/">Peter Arcidiacono</a> 
+        and <a href="http://www.terry.uga.edu/directory/economics/josh-kinsler">Josh Kinsler</a> <br> <i>Journal of Human Resources</i>, 
+        Forthcoming. <br><button class="accordion"> 
     Abstract   
     </button>   
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> We examine how increased admissions competition at elite US colleges has affected the admissions advantage that legacies and athletes (LA) receive. Using 18 years of Harvard admissions data, we show that non-legacy, non-athlete (NLNA) applications expanded while LA applications remained flat. Yet, the share of LA admits remained stable, implying substantial <i>increases</i> in LA admissions advantages. These facts imply a strong degree of complementarity in the number of LA admits and overall admit quality. If the admissions advantages for LA applicants had been constant throughout this period, there would have been a large increase in the number of minority admits. </p></div>
@@ -192,7 +196,20 @@
     <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://doi.org/10.1016/j.jeconom.2020.07.056">Understanding Migration Aversion using Elicited Counterfactual Choice Probabilities</a> <br> with <a href="https://www.newyorkfed.org/research/economists/kosar/index.html">Gizem Ko&#351;ar</a> and <a href="https://www.newyorkfed.org/research/economists/vanderklaauw/index.html">Wilbert van der Klaauw</a> <br> <i>Journal of Econometrics</i>, 2022, 231 (1): 123&ndash;147.  <br><button class="accordion"> 
       Abstract
     </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p>This paper investigates how migration and location choice decisions depend on a large set of location characteristics, with particular focus on measuring the importance and nature of non-monetary costs of moving. We employ a stated-preference approach to elicit respondents' choice probabilities for a set of hypothetical choice scenarios, using two waves from the NY Fed's Survey of Consumer Expectations. Our stated probabilistic choice approach allows us to recover the distribution of individual-level preferences for location and mobility attributes without concerns about omitted variables and selection biases that hamper analyses based on observed mobility choices alone. We estimate substantial heterogeneity in the willingness-to-pay (WTP) for location characteristics and in moving costs, both across and within demographic groups. We find moving costs to be strongly associated with attachment to the current neighborhood and dwelling and to social networks. Our results indicate evidence of sorting into current locations based on preferences for location attributes as well as a strong negative association between respondents' non-monetary moving costs and their moving expectations and actual mobility decisions. </p></div>
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p>
+      This paper investigates how migration and location choice decisions depend on a large set of location characteristics, 
+      with particular focus on measuring the importance and nature of non-monetary costs of moving. 
+      We employ a stated-preference approach to elicit respondents' choice probabilities for a set of hypothetical choice scenarios, 
+      using two waves from the NY Fed's Survey of Consumer Expectations. 
+      Our stated probabilistic choice approach allows us to recover the distribution of individual-level preferences 
+      for location and mobility attributes without concerns about omitted variables and 
+      selection biases that hamper analyses based on observed mobility choices alone. 
+      We estimate substantial heterogeneity in the willingness-to-pay (WTP) for location 
+      characteristics and in moving costs, both across and within demographic groups. 
+      We find moving costs to be strongly associated with attachment to the current neighborhood 
+      and dwelling and to social networks. Our results indicate evidence of sorting into current 
+      locations based on preferences for location attributes as well as a strong negative association 
+      between respondents' non-monetary moving costs and their moving expectations and actual mobility decisions. </p></div>
     <p style="margin:0"><button class="accordion">
       Online Appendix
     </button>
