--- a/index.html
+++ b/index.html
@@ -109,8 +109,13 @@
       </header>
       <section>
       <img src="photo1.jpg" height="313" width="209" alt="Xin Jin"></h3>
-      <p>I am currently a Postdoctoral of <a href="https://cise.ecust.edu.cn/">Control Science and Engineering</a> at the <a href="https://www.ecust.edu.cn/">East China Univeristy of Science and Technology</a> and Research Affiliate at the <a href="https://www.iza.org/">Department of Automation</a>. I graduated with a PhD in <a href="http://econ.duke.edu">Control Science and Engineering</a> from <a href="http://www.duke.edu">East China Univeristy of Science and Technology University</a> in June 2021.</p>
+      <p>I am currently a Postdoctoral of <a href="https://cise.ecust.edu.cn/">Control Science and Engineering</a> at the <a href="https://www.ecust.edu.cn/">East China Univeristy of Science and Technology</a> and Research Affiliate at the <a href="https://cise.ecust.edu.cn/">Department of Automation</a>. I graduated with a PhD in Control Science and Engineering</a> 
+        from <a href="https://www.ecust.edu.cn/">East China Univeristy of Science and Technology University</a> in June 2021.</p>
       <p>My research interests include rigid body, attitude control, multi-agent systems, event-triggered control, and applications of robotics.</p>
+      <img src="research/distributed_spacecraft.jpg">
+      <img src="research/control_diagram.png">
+      <img src="research/experiment.png">
+      <img src="research/outdoor.png">
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
