--- a/research.html
+++ b/research.html
@@ -99,7 +99,7 @@
           <!-- <a href="http://ideas.repec.org/f/pra541.html"><i class="fa fa-fw fa-share-alt-square"></i> RePEc</a><br> -->
           <a href="http://github.com/jx9810"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
           <a href="http://twitter.com/jx9810" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>
-          <a href="http://linkedin.com/in/jx9810" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
+          <!-- <a href="http://linkedin.com/in/jx9810" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br> -->
           <br>
         </div>
         <br>
@@ -172,28 +172,46 @@
     <p style="margin:0"> Coming soon. <br> <br> 
 
       
-      <!-- <a style="margin:0; font-size:100%; font-weight:bold" href="https://doi.org/10.3368/jhr.0421-11641R1">
-        Divergent: The Time Path of Legacy and Athlete Admissions at Harvard</a> <br> 
-        with <a href="http://public.econ.duke.edu/~psarcidi/">Peter Arcidiacono</a> 
-        and <a href="http://www.terry.uga.edu/directory/economics/josh-kinsler">Josh Kinsler</a> <br> <i>Journal of Human Resources</i>, 
+    <a style="margin:0; font-size:100%; font-weight:bold" href="https://ieeexplore.ieee.org/document/9978677">
+      Robust Global Attitude Control: Random Reset Rule</a> <br> 
+        with Dandan Zhang</a> 
+        and <a href="http://www.cse.zju.edu.cn/english/redir.php?catalog_id=1113878&object_id=1115940">Josh Kinsler</a> <br> 
+        <i>IEEE Transactions on Automatic Control</i>, 
         Forthcoming. <br><button class="accordion"> 
     Abstract   
     </button>   
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> We examine how increased admissions competition at elite US colleges has affected the admissions advantage that legacies and athletes (LA) receive. Using 18 years of Harvard admissions data, we show that non-legacy, non-athlete (NLNA) applications expanded while LA applications remained flat. Yet, the share of LA admits remained stable, implying substantial <i>increases</i> in LA admissions advantages. These facts imply a strong degree of complementarity in the number of LA admits and overall admit quality. If the admissions advantages for LA applicants had been constant throughout this period, there would have been a large increase in the number of minority admits. </p></div>
-    <p style="margin:0"><button class="accordion">
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;">
+      <p> In this paper, we propose a new random reset rule for attitude control systems, where a new Lyapunov-Foster function implies 
+        the robust global attitude control without adding any constraints on the random reset rule, except the support domain 
+        for the involved random variables. Compared with deterministic binary logic variables, random variables introduce 
+        an automatically adjusted hysteresis half-width for each reset process, thus bring a flexible tradeoff between the 
+        hysteresis-induced inefficiency for avoiding unwinding phenomenon and the robustness to measurement noise. 
+        A benchmark case for the attitude tracking control of a miniature quadrotor prototype verifies the designed random reset rule. </p></div>
+    <!-- <p style="margin:0"><button class="accordion">
       Online Appendix
     </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <a href="https://tyleransom.github.io/research/DivergentOnlineAppendix.pdf">Online Appendix</a> </p></div>
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> 
+      <a href="https://tyleransom.github.io/research/DivergentOnlineAppendix.pdf">Online Appendix</a> </p></div>
     <p style="margin:0"><button class="accordion">
       Replication files
     </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <a href="https://github.com/tyleransom/Divergent-JHR/releases/tag/v1.0">Data &amp; code for replication</a> <br> <a href="https://doi.org/10.5281/zenodo.5764855"><img src="https://zenodo.org/badge/435621674.svg" alt="DOI"></a> </p></div>
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> 
+      <a href="https://github.com/tyleransom/Divergent-JHR/releases/tag/v1.0">Data &amp; code for replication</a> <br> 
+      <a href="https://doi.org/10.5281/zenodo.5764855"><img src="https://zenodo.org/badge/435621674.svg" alt="DOI"></a> </p></div>
     <p style="margin:0"><button class="accordion">
       Other versions
     </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> <a href="https://tyleransom.github.io/research/divergent.pdf">Accepted version</a> (December 2021) <br> <a href="http://www.nber.org/papers/w26315">NBER Working Paper No. 26315</a> (September 2019) <br> <a href="https://www.iza.org/publications/dp/12634/divergent-the-time-path-of-legacy-and-athlete-admissions-at-harvard">IZA Discussion Paper No. 12634</a> <br> <a href="https://hceconomics.uchicago.edu/research/working-paper/divergent-time-path-legacy-and-athlete-admissions-harvard">HCEO Working Paper No. 2019-081</a> (December 2019) </p></div><br>
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> 
+      <a href="https://tyleransom.github.io/research/divergent.pdf">Accepted version</a> (December 2021) <br> 
+      <a href="http://www.nber.org/papers/w26315">NBER Working Paper No. 26315</a> (September 2019) <br> 
+      <a href="https://www.iza.org/publications/dp/12634/divergent-the-time-path-of-legacy-and-athlete-admissions-at-harvard">
+        IZA Discussion Paper No. 12634</a> <br>
+         <a href="https://hceconomics.uchicago.edu/research/working-paper/divergent-time-path-legacy-and-athlete-admissions-harvard">
+          HCEO Working Paper No. 2019-081</a> (December 2019) </p></div><br> -->
 
-    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://doi.org/10.1016/j.jeconom.2020.07.056">Understanding Migration Aversion using Elicited Counterfactual Choice Probabilities</a> <br> with <a href="https://www.newyorkfed.org/research/economists/kosar/index.html">Gizem Ko&#351;ar</a> and <a href="https://www.newyorkfed.org/research/economists/vanderklaauw/index.html">Wilbert van der Klaauw</a> <br> <i>Journal of Econometrics</i>, 2022, 231 (1): 123&ndash;147.  <br><button class="accordion"> 
+
+    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://doi.org/10.1016/j.jeconom.2020.07.056">
+      Understanding Migration Aversion using Elicited Counterfactual Choice Probabilities</a> <br> with <a href="https://www.newyorkfed.org/research/economists/kosar/index.html">Gizem Ko&#351;ar</a> and <a href="https://www.newyorkfed.org/research/economists/vanderklaauw/index.html">Wilbert van der Klaauw</a> <br> <i>Journal of Econometrics</i>, 2022, 231 (1): 123&ndash;147.  <br><button class="accordion"> 
       Abstract
     </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p>
