--- a/research.html
+++ b/research.html
@@ -178,8 +178,8 @@
         Forthcoming. <br><button class="accordion"> 
     Abstract   
     </button>   
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;">
-      <p> In this paper, we propose a new random reset rule for attitude control systems, where a new Lyapunov-Foster function implies 
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> 
+      In this paper, we propose a new random reset rule for attitude control systems, where a new Lyapunov-Foster function implies 
         the robust global attitude control without adding any constraints on the random reset rule, except the support domain 
         for the involved random variables. Compared with deterministic binary logic variables, random variables introduce 
         an automatically adjusted hysteresis half-width for each reset process, thus bring a flexible tradeoff between the 
