--- a/research.html
+++ b/research.html
@@ -184,7 +184,7 @@
         for the involved random variables. Compared with deterministic binary logic variables, random variables introduce 
         an automatically adjusted hysteresis half-width for each reset process, thus bring a flexible tradeoff between the 
         hysteresis-induced inefficiency for avoiding unwinding phenomenon and the robustness to measurement noise. 
-        A benchmark case for the attitude tracking control of a miniature quadrotor prototype verifies the designed random reset rule. </p></div><br>
+        A benchmark case for the attitude tracking control of a miniature quadrotor prototype verifies the designed random reset rule. </p><br>
     <hr>
 
     <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://ieeexplore.ieee.org/document/9525305">
@@ -192,7 +192,7 @@
       with <a href="https://www.uvic.ca/research/labs/acipl/groupmembers/administration/profiles/shiyang.php">Yang Shi</a>, 
       <a href="http://www.ytangecust.com/">Yang Tang</a>,
       <a href="https://scholar.google.com/citations?user=orTfGNMAAAAJ&hl=en">Herbert Werner</a>,
-      <a href="https://www.pik-potsdam.de/members/kurths/homepage">Jürgen Kurths</a><br>,
+      <a href="https://www.pik-potsdam.de/members/kurths/homepage">Jürgen Kurths</a><br>
       <i>IEEE Transactions on Automatic Control</i>, 2022, 231 (1): 123&ndash;147.  <br><button class="accordion"> 
       Abstract
     </button>
@@ -204,15 +204,14 @@
       the attitude configuration space. The theoretical results reveal that the settling time is related to the interevent interval and 
       the algebraic connectivity of the topology graph. We further consider the consensus protocol under a jointly connected graph, 
       and establish the settling time estimation that depends on the switching instants. 
-      Numerical simulations are conducted to verify the validity of the theoretical results finally.</p></div><br>
+      Numerical simulations are conducted to verify the validity of the theoretical results finally.</p><br>
     <hr>
 
     <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://www.sciencedirect.com/science/article/abs/pii/S0005109822003168">
       Event-triggered attitude synchronization of multiple rigid body systems with velocity-free measurements</a> <br> 
       with <a href="http://www.ytangecust.com/">Yang Tang</a>, 
       <a href="https://www.uvic.ca/research/labs/acipl/groupmembers/administration/profiles/shiyang.php">Yang Shi</a>,
-      <a href="https://scholar.google.com/citations?user=3o-0DvYAAAAJ&hl=en">Wenli Du</a>
-      
+      <a href="https://scholar.google.com/citations?user=3o-0DvYAAAAJ&hl=en">Wenli Du</a><br>
       <i>Automatica</i>, 2022, 143: 110460.  <br><button class="accordion"> 
       Abstract
     </button>
@@ -224,7 +223,8 @@
       continuous communication and monitoring requirements among rigid bodies are removed. The convergence of synchronization 
       is analyzed based on a positively invariant set contained in \mathbb{SO}(3), which inherently avoids the singularity problem or non-uniqueness 
       issue for the attitude representation. Furthermore, based on an invariant-like principle, we extend the topology graph to 
-      a switching topology under an average dwell-time condition. A numerical simulation is conducted to show the effectiveness of the proposed control strategy.</p></div>
+      a switching topology under an average dwell-time condition. A numerical simulation is conducted to show the effectiveness 
+      of the proposed control strategy.</p></div>
     <hr>
 
 
