--- a/research.html
+++ b/research.html
@@ -192,7 +192,7 @@
       with <a href="https://www.uvic.ca/research/labs/acipl/groupmembers/administration/profiles/shiyang.php">Yang Shi</a>, 
       <a href="http://www.ytangecust.com/">Yang Tang</a>,
       <a href="https://scholar.google.com/citations?user=orTfGNMAAAAJ&hl=en">Herbert Werner</a>,
-      <a href="https://www.pik-potsdam.de/members/kurths/homepage">Jürgen Kurths</a><br>
+      and <a href="https://www.pik-potsdam.de/members/kurths/homepage">Jürgen Kurths</a><br>
       <i>IEEE Transactions on Automatic Control</i>, 2022, 231 (1): 123&ndash;147.  <br><button class="accordion"> 
       Abstract
     </button>
