--- a/research.html
+++ b/research.html
@@ -184,7 +184,7 @@
         for the involved random variables. Compared with deterministic binary logic variables, random variables introduce 
         an automatically adjusted hysteresis half-width for each reset process, thus bring a flexible tradeoff between the 
         hysteresis-induced inefficiency for avoiding unwinding phenomenon and the robustness to measurement noise. 
-        A benchmark case for the attitude tracking control of a miniature quadrotor prototype verifies the designed random reset rule. </p><br>
+        A benchmark case for the attitude tracking control of a miniature quadrotor prototype verifies the designed random reset rule. </a><br>
     <hr>
 
     <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://ieeexplore.ieee.org/document/9525305">
