--- a/research.html
+++ b/research.html
@@ -172,7 +172,7 @@
 
     <a style="margin:0; font-size:100%; font-weight:bold" href="https://ieeexplore.ieee.org/document/9978677">
       Robust Global Attitude Control: Random Reset Rule</a> <br> 
-        with Dandan Zhang</a> 
+        with Dandan Zhang 
         and <a href="http://www.cse.zju.edu.cn/english/redir.php?catalog_id=1113878&object_id=1115940">hongye Su</a> <br> 
         <i>IEEE Transactions on Automatic Control</i>, 
         Forthcoming. <br><button class="accordion"> 
@@ -184,10 +184,10 @@
         for the involved random variables. Compared with deterministic binary logic variables, random variables introduce 
         an automatically adjusted hysteresis half-width for each reset process, thus bring a flexible tradeoff between the 
         hysteresis-induced inefficiency for avoiding unwinding phenomenon and the robustness to measurement noise. 
-        A benchmark case for the attitude tracking control of a miniature quadrotor prototype verifies the designed random reset rule. </a><br>
+        A benchmark case for the attitude tracking control of a miniature quadrotor prototype verifies the designed random reset rule. </p></div><br>
     <hr>
 
-    <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://ieeexplore.ieee.org/document/9525305">
+    <a style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://ieeexplore.ieee.org/document/9525305">
       Event-triggered Fixed-time Attitude Consensus with Fixed and Switching Topologies</a> <br> 
       with <a href="https://www.uvic.ca/research/labs/acipl/groupmembers/administration/profiles/shiyang.php">Yang Shi</a>, 
       <a href="http://www.ytangecust.com/">Yang Tang</a>,
@@ -204,7 +204,7 @@
       the attitude configuration space. The theoretical results reveal that the settling time is related to the interevent interval and 
       the algebraic connectivity of the topology graph. We further consider the consensus protocol under a jointly connected graph, 
       and establish the settling time estimation that depends on the switching instants. 
-      Numerical simulations are conducted to verify the validity of the theoretical results finally.</p><br>
+      Numerical simulations are conducted to verify the validity of the theoretical results finally.</p></div><br>
     <hr>
 
     <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://www.sciencedirect.com/science/article/abs/pii/S0005109822003168">
