--- a/research.html
+++ b/research.html
@@ -180,11 +180,11 @@
     </button>   
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> 
       In this paper, we propose a new random reset rule for attitude control systems, where a new Lyapunov-Foster function implies 
-        the robust global attitude control without adding any constraints on the random reset rule, except the support domain 
-        for the involved random variables. Compared with deterministic binary logic variables, random variables introduce 
-        an automatically adjusted hysteresis half-width for each reset process, thus bring a flexible tradeoff between the 
-        hysteresis-induced inefficiency for avoiding unwinding phenomenon and the robustness to measurement noise. 
-        A benchmark case for the attitude tracking control of a miniature quadrotor prototype verifies the designed random reset rule. </p></div>
+      the robust global attitude control without adding any constraints on the random reset rule, except the support domain 
+      for the involved random variables. Compared with deterministic binary logic variables, random variables introduce 
+      an automatically adjusted hysteresis half-width for each reset process, thus bring a flexible tradeoff between the 
+      hysteresis-induced inefficiency for avoiding unwinding phenomenon and the robustness to measurement noise. 
+      A benchmark case for the attitude tracking control of a miniature quadrotor prototype verifies the designed random reset rule. </p></div><br>
   
 
     <a style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://ieeexplore.ieee.org/document/9525305">
@@ -204,8 +204,8 @@
       the attitude configuration space. The theoretical results reveal that the settling time is related to the interevent interval and 
       the algebraic connectivity of the topology graph. We further consider the consensus protocol under a jointly connected graph, 
       and establish the settling time estimation that depends on the switching instants. 
-      Numerical simulations are conducted to verify the validity of the theoretical results finally.</p></div>
-    <hr>
+      Numerical simulations are conducted to verify the validity of the theoretical results finally.</p></div><br>
+  
 
     <p style="margin:0"> <a style="margin:0; font-size:100%; font-weight:bold" href="https://www.sciencedirect.com/science/article/abs/pii/S0005109822003168">
       Event-triggered attitude synchronization of multiple rigid body systems with velocity-free measurements</a> <br> 
@@ -224,8 +224,7 @@
       is analyzed based on a positively invariant set contained in \mathbb{SO}(3), which inherently avoids the singularity problem or non-uniqueness 
       issue for the attitude representation. Furthermore, based on an invariant-like principle, we extend the topology graph to 
       a switching topology under an average dwell-time condition. A numerical simulation is conducted to show the effectiveness 
-      of the proposed control strategy.</p></div>
-    <hr>
+      of the proposed control strategy.</p></div><br>
 
 
     <h2><a id="works-in-progress" class="anchor" href="#workinprogress" aria-hidden="true"><span class="octicon octicon-link"></span></a>Works in Progress</h2>
@@ -235,8 +234,8 @@
     </button>
     <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p> 
       Does temperature affect real economic activity? Using the annual Current Population Survey between 1963 and 2015, 
-      we show that there is no association between temperature and earnings, hours, or output after controlling 
-      for time-invariant spatial heterogeneity and time-varying demographic factors. These results are robust to 
+       we show that there is no association between temperature and earnings, hours, or output after controlling 
+       for time-invariant spatial heterogeneity and time-varying demographic factors. These results are robust to 
       five separate sources of micro-data, different sampling horizons, functional forms, spatial measures of temperature, 
       and subsets of the data. This paper studies the relationship between temperature and productivity across space and time. 
       Motivated by these null results, we develop a spatial equilibrium model where temperature can affect not only firm productivity, 
@@ -248,7 +247,17 @@
     <p style="margin:0"> <b>The Role of Supply and Demand Factors in Explaining the Migration of College Majors</b> <br><button class="accordion">
       Abstract
     </button>
-    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p>  This paper documents a new stylized fact about the United States labor market: internal migration rates are dramatically different across college majors. For some college majors, migration rates are even lower than those without a college degree. I relate major migration rates with majors' spatial concentration and find that a major's spatial concentration explains about one fourth of the cross-major variation in migration rates. With this descriptive evidence as a guide, I estimate a structural model of locational choice where college graduates have heterogeneous preferences---at the detailed major level---for living close to home, and for working in a location with a high concentration of their fellow majors. Using estimates of the structural model, I decompose the cross-major migration rates into supply and demand factors and find that supply factors (i.e. moving costs) explain the vast majority of differences in migration rates across majors. My findings underscore the difficulty in attracting college majors to a particular location using demand-side investments. My results also highlight the importance of place in determining the labor market outcomes of college majors.</p></div><br>
+    <div class="panel" style="background-color: #F1F1F1; color: #666; padding: 10px;"><p>  
+      This paper documents a new stylized fact about the United States labor market: internal migration rates are dramatically 
+      different across college majors. For some college majors, migration rates are even lower than those without a college degree. 
+      I relate major migration rates with majors' spatial concentration and find that a major's spatial concentration explains about 
+      one fourth of the cross-major variation in migration rates. With this descriptive evidence as a guide, I estimate a structural 
+      model of locational choice where college graduates have heterogeneous preferences---at the detailed major level---
+      for living close to home, and for working in a location with a high concentration of their fellow majors. Using estimates 
+      of the structural model, I decompose the cross-major migration rates into supply and demand factors and find that supply factors 
+      (i.e. moving costs) explain the vast majority of differences in migration rates across majors. My findings underscore the difficulty 
+      in attracting college majors to a particular location using demand-side investments. My results also highlight the importance of place 
+      in determining the labor market outcomes of college majors.</p></div><br>
 
     <p style="margin:0"> <b>Minorities in STEM: The Role of Ability Revelation</b> <br> with <a href="http://www.nickchk.com/">Nick Huntington-Klein</a>. <br><button class="accordion">
       Abstract
